[project]
name = "altera2ion-loader"
version = "1.0.0"
description = "Licensed encrypted LoRA loader for ALTERA2ION ComfyUI packages."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
    "Environment :: GPU :: Apple Metal"
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
Repository = "https://github.com/altera2ion/ComfyUI-Altera2ion-Loader"
Documentation = "https://www.altera2ion.com/comfy-setup"
"Bug Tracker" = "https://github.com/altera2ion/ComfyUI-Altera2ion-Loader/issues"

[tool.comfy]
PublisherId = "altera2ion"
DisplayName = "ALTERA2ION Loader"
