[project]
name = "altera2ion-loader"
version = "1.1.1"
description = "Licensed encrypted LoRA loader for ALTERA2ION ComfyUI packages."
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0.0",
    "safetensors>=0.4.0"
]
classifiers = [
    "Operating System :: OS Independent",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
    "Environment :: GPU :: Apple Metal"
]

[project.urls]
Repository = "https://github.com/hemantjindal/ComfyUI-Altera2ion-Loader"
Documentation = "https://www.altera2ion.com/comfy-setup"
"Bug Tracker" = "https://github.com/hemantjindal/ComfyUI-Altera2ion-Loader/issues"

[tool.comfy]
PublisherId = "altera2ion"
DisplayName = "ALTERA2ION Loader"
